--- a/package.json
+++ b/package.json
@@ -3,38 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@date-io/date-fns": "^2.13.1",
     "@date-io/moment": "^1.3.13",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.5",
     "@fullcalendar/core": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
-
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.9.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.32.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.2.0",
     "json-server": "^0.17.0",
-
     "md5": "^2.3.0",
     "moment": "^2.29.1",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-calendar": "^3.7.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
-    "universal-cookie": "^4.0.4"
+    "react-scripts": "5.0.1",
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
