--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "apexcharts": "^3.32.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.0",
-    "json-server": "^0.17.0",
+    "json-server": "^0.4.2",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "react": "^18.2.0",
@@ -31,7 +31,7 @@
     "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
